@@ -1,3 +1,9 @@
+2010-09-08  Don Porter  <dgp@users.sourceforge.net>
+
+	* win/tclWinChan.c:    #ifdef protections to permit builds with
+	* win/tclWinFCmd.c:     mingw on amd64 systems.  Thanks to "mescalinum"
+	for reporting and testing.	[Bug 3059922]
+
 2010-09-08  Andreas Kupries  <andreask@activestate.com>
 
 	* doc/tm.n: Added underscore to the set of characters accepted in
